[tool.poetry]
name = "anatxt"
version = "0.1.0"
description = "analysis text"
authors = ["yishiyouya <1742468256@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jieba = "^0.42.1"
hanlp-restful = "^0.0.21"
nltk = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
